@@ -3,6 +3,7 @@
 	* [!!!] Remove TS-configured userFuncs in favor of hooks
 	* Resolves #71660: [!!!] Refactor, streamline and cleanup all scripts: all API changed
 	* Resolves #61659: Usergroups are removed on update
+	* Fix error regarding salutation in static TS template
 
 2015-11-03 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Resolves #71286: [!!!] Remove xclass assignments
